--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
+@font-face {
+  font-family: Telegraf-Regular;
+  src: url(../public/Telegraf-Regular.otf);
+}
+
 html,
 body {
   padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  
+  font-family: Telegraf-Regular,-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
 }
 
 a {
@@ -13,4 +19,10 @@ a {
 
 * {
   box-sizing: border-box;
+
+}
+
+b{
+  color: #60c26b;
+  font-weight: 400;
 }
