--- a/styles/FeaturedOne.module.css
+++ b/styles/FeaturedOne.module.css
@@ -1,3 +1,6 @@
+.featured_section_container{
+background-color: rgba(250, 235, 215, 0.143);
+}
 .featured_container{
     display: flex;
     justify-content:space-between;
