--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,3 +16,8 @@
 .post_item{
     margin:1em;
 }
+.recent_posts_section_bigger_container h2{
+    font-size: 5em;
+    margin:1em;
+    margin-left: 2em;
+}
