--- a/styles/FeaturedBanner.module.css
+++ b/styles/FeaturedBanner.module.css
@@ -12,7 +12,7 @@
     background-position: center;
     margin-left: 0%;
  
-    background-repeat: no-repeat;
+
     margin-bottom: 70vh;
     
  
@@ -58,4 +58,57 @@ justify-content: right;
 }
 .block2 img{
     padding-right: 3em;
+}
+
+@media screen and (max-width: 900px) {
+    .block2{
+        display: none;
+    }
+
+    .block{
+        display: none;
+    }
+
+.featured_banner_container{
+    top:0;
+    text-align: center;
+left:0;
+width: 100%;
+height: 100%;
+
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-position: center;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin: 0;
+padding: 0;
+
+background-color: rgba(0, 0, 0, 0.301);
+}
+.featured_banner_section{
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    position: static;
+    height:40vh;
+    width: 100%;
+ 
+}
+
+.featured_banner_bigger_section{
+ padding: 1em;
+ width: 100%;
+ position:static;
+
+}
+}
+
+
+@media screen and (max-width: 900px) {
+
+  
+
 }
