--- a/styles/Serie.module.css
+++ b/styles/Serie.module.css
@@ -27,3 +27,30 @@ width: 50%;
 .episode_container_info{
     padding-top: 0.75em;
 }
+
+
+
+
+@media screen and (max-width: 900px) {
+    .serie_section {
+        padding: 2em 0 ;
+        margin-bottom: 30em;
+    }
+    .serie_section h1{
+        padding-left:1em;
+        font-size: 3em;
+    
+    }
+    .episode_container{
+        flex-direction: column ;
+        align-items: center;
+    flex-wrap: nowrap;
+    }
+
+    .episode_container_item{
+        display: flex;
+        justify-content: start;
+        padding: 0;
+        width:100%;
+        }
+}
