--- a/styles/PostPage.module.css
+++ b/styles/PostPage.module.css
@@ -87,3 +87,23 @@ flex-direction: column;
 #text{
     color:red;
 }
+
+@media screen and (max-width: 900px) {
+    .prev_button{
+        width: 2.3em;
+    }
+    .post_content img{
+        box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+        width: 100%;
+        height: 100%;
+    }
+    .post_header{
+        font-size:3em;
+      
+    }
+
+    .post_info_container{
+
+        padding-left: 3em;
+    }
+}
