--- a/styles/SeriPage.module.css
+++ b/styles/SeriPage.module.css
@@ -49,7 +49,7 @@ flex-direction: column;
 }
 
 .post_info_container{
-    color: rgb(0, 0, 0);   
+    color: rgb(255, 255, 255);   
     padding-left: 5vw;
     line-height:76.5px;
 
@@ -79,6 +79,8 @@ flex-direction: column;
 }
 .post_content img{
     box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 100%;
 }
 .image_container{
     text-align: center;
@@ -86,4 +88,22 @@ flex-direction: column;
 
 #text{
     color:red;
+}
+
+
+@media screen and (max-width: 900px) {
+    .prev_button{
+        width: 2.3em;
+    }
+    .post_header{
+        font-size:3em;
+      
+    }
+
+    .post_info_container{
+
+        padding-left: 3em;
+    }
+
+
 }
