--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -24,7 +24,7 @@ margin-bottom: 1em;
   position: absolute;
   right: 0;
   top: 0;
-  background-color: red;
+  background-image: linear-gradient(rgb(211, 211, 211),rgba(178, 178, 178));
   height: 100%;
   width: 100%;
   display: flex;
@@ -39,9 +39,10 @@ margin-bottom: 1em;
 }
 
 .showMenu span {
-  color: green;
+  
   font-size: 2em;
   padding: 1em;
+
 }
 
 .hideMenu {
@@ -52,7 +53,7 @@ margin-bottom: 1em;
     position: absolute;
     right: 0;
     top: 0;
-    background-color: blue;
+    background-image: linear-gradient(rgb(211, 211, 211),rgba(178, 178, 178));
     height: 100%;
     width: 100%;
     display: flex;
@@ -133,6 +134,69 @@ font-size:2em;
 }
 
 
+.header_container_inside{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  padding: 1em 7em;
+}
+
+.header_container_categories{
+  font-size: 2em;
+  height: 100%;
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+
+  flex-direction: column;
+ 
+}
+.header_container_categories h2{
+  font-size: 20px;
+
+}
+.header_container_categories ul{
+  list-style: none;
+  padding-inline-start: 0;
+}
+.header_container_categories ul li{
+padding: 0.3em 0;
+ }
+ .header_container_categories ul li:hover{
+  padding: 0.3em 0;
+color: white;
+cursor: pointer;
+   }
+
+   .right_side{
+    padding: 1em;
+    width: 40vw;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+   }
+    .right_side div{
+      margin: 0.9em;
+    }
+   .right_side span{
+    font-size: 1em;
+   }
+
+   .right_side button{
+    margin-bottom: 1em;
+    width: 100%;
+    height: 5vh;
+    
+}
+.right_side button:hover{
+  cursor: pointer;
+  background-color:rgba(70, 65, 65, 0.112) ;
+}
+
 @media screen and (max-width: 900px) {
   .navBar:first-child{
     display: none;
@@ -140,5 +204,38 @@ font-size:2em;
   .sub_button{
     display: none;
   }
-
+  .header_container_inside{
+    flex-direction: column;
+ height: 150vh;
+  width: 100%;
+  }
+  .header_container_categories{
+ height: 60vh;
+ width: 40vw;
+ padding-bottom: 0;
+  }
+  .header_container h2{
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
+  .header_container_categories li{
+font-size: 20px;
+width: 40vw;
+  }
+  .right_side{
+  justify-content: start;
+width: 40vw;
+  }
+  .right_side p{
+    width: 40vw;
+  }
+  .showMenu{
+    height: 170vh;
+   
+  }
+  .social{
+display: flex;
+margin-left: -1em;
+  }
+ 
 }
