--- a/styles/EditorsPick.module.css
+++ b/styles/EditorsPick.module.css
@@ -1,79 +1,69 @@
-.editors_pick_bigger_container h2{
-    font-size: 5em;
-    margin: 1em;
-    margin-left: 2em;
-
+.editors_pick_bigger_container h2 {
+  font-size: 5em;
+  margin: 1em;
+  margin-left: 2em;
 }
 .editors_pick_bigger_container {
-    margin-bottom: 30vh;
+  margin-bottom: 30vh;
 }
 
-.editors_pick_container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1em 5.5em;
-
+.editors_pick_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1em 5.5em;
 }
 
-.editors_pick_card{
-    width: 300px;
-    height: 300px;
-    background-color: red;
-    padding: 1.5em;
-    
+.editors_pick_card {
+  width: 300px;
+  height: 300px;
+  background-color: red;
+  padding: 1.5em;
 }
 
-.editors_pick_card:hover{
-    opacity: 0.91;
-    cursor: pointer;
+.editors_pick_card:hover {
+  opacity: 0.91;
+  cursor: pointer;
 }
 
-.editors_pick_card h5{
-    font-size: 1.4em;
+.editors_pick_card h5 {
+  font-size: 1.4em;
 }
 
-.editors_pick_card p{
-    font-size: 1.3em;
+.editors_pick_card p {
+  font-size: 1.3em;
 }
 
-.editors_pick_container div:first-child{
-    background: linear-gradient(to bottom right, #F2C14E, #F78154);
+.editors_pick_container div:first-child {
+  background: linear-gradient(to bottom right, #f2c14e, #f78154);
 }
-.editors_pick_container div:nth-child(2){
-    background: linear-gradient(to bottom right, #b9c6a7, #35ce60);
+.editors_pick_container div:nth-child(2) {
+  background: linear-gradient(to bottom right, #b9c6a7, #35ce60);
 }
-.editors_pick_container div:nth-child(3){
-    background: linear-gradient(to bottom right, #7DB7CC, #6E5FB3);
+.editors_pick_container div:nth-child(3) {
+  background: linear-gradient(to bottom right, #7db7cc, #6e5fb3);
 }
-.editors_pick_container div:nth-child(4){
-    background: linear-gradient(to bottom right, #e97474, #bd4141);
+.editors_pick_container div:nth-child(4) {
+  background: linear-gradient(to bottom right, #e97474, #bd4141);
 }
-
 
 @media screen and (max-width: 900px) {
+  .editors_pick_bigger_container {
+    text-align: center;
+    margin-bottom: 15vh;
+  }
+  .editors_pick_bigger_container h2 {
+    font-size: 3em;
+    margin: 1em;
+  }
 
-    .editors_pick_bigger_container{
-        text-align: center;
-        margin-bottom: 15vh;
-      
-    }
-    .editors_pick_bigger_container h2{
-        font-size: 3em;
-        margin: 1em;
-    }
-
-    .editors_pick_container{
-        flex-direction: column;
-        padding: 0 2em;
-     
-    }
-    .editors_pick_card{
-        margin-bottom: 1em;
-        height: 100%;
-        width: 100%;
-        
-    }
-
-    
+  .editors_pick_container {
+    flex-direction: column;
+    padding: 0 2em;
+  }
+  .editors_pick_card {
+    margin-bottom: 1em;
+    height: 100%;
+    width: 100%;
+  }
 }
