--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,117 +1,103 @@
-.footer_section_container{
-
-    background-image: linear-gradient(rgba(211, 211, 211, 0.024),rgba(178, 178, 178, 0.233));
+.footer_section_container {
+  background-image: linear-gradient(
+    rgba(211, 211, 211, 0.024),
+    rgba(178, 178, 178, 0.233)
+  );
 }
-.footer_top_container{
-    display: flex;
-    justify-content: space-between;
-    padding: 0 2rem;
+.footer_top_container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2rem;
 }
-.footer_top_container div{
-
-height: 400px;
-width: 100%;
-padding: 1em;
+.footer_top_container div {
+  height: 400px;
+  width: 100%;
+  padding: 1em;
 }
 
 .footer_top_middle_container {
-display: flex;
-align-items: center;
-flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.footer_top_middle_container ul  {
-    list-style-type: none;
-    margin-left: 0;
-    padding-left: 0;
+.footer_top_middle_container ul {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
 }
 
-.footer_top_middle_container ul li{
-    margin-bottom: 0.5em;
+.footer_top_middle_container ul li {
+  margin-bottom: 0.5em;
 }
 
-.footer_top_middle_container ul li:hover{
-cursor: pointer;
+.footer_top_middle_container ul li:hover {
+  cursor: pointer;
 }
 
+.footer_top_right_container div {
+  text-align: start;
 
-.footer_top_right_container div{
-    text-align: start;
-    
-    width: 100%;
+  width: 100%;
 }
 
-.footer_top_right_container button{
-    margin-bottom: 1em;
-    width: 100%;
-    height: 5vh;
-    
+.footer_top_right_container button {
+  margin-bottom: 1em;
+  width: 100%;
+  height: 5vh;
 }
-.footer_top_right_container button:hover{
-    cursor: pointer;
-    background-color:rgba(70, 65, 65, 0.112) ;
+.footer_top_right_container button:hover {
+  cursor: pointer;
+  background-color: rgba(70, 65, 65, 0.112);
 }
-.footer_top_right_container p{
-
-    width: 100%;
+.footer_top_right_container p {
+  width: 100%;
 }
 
-
-
-.footer_bottom_container{
-    margin-top: 1em;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 5em;
-    border-top: 0.5px solid lightgray;
+.footer_bottom_container {
+  margin-top: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 5em;
+  border-top: 0.5px solid lightgray;
 }
 
-.footer_bottom_container div{
-    padding: 1em;
+.footer_bottom_container div {
+  padding: 1em;
 }
-.footer_bottom_container div span{
- 
-    margin-left: 1em;
+.footer_bottom_container div span {
+  margin-left: 1em;
 }
-.footer_bottom_container div span:hover{
-    cursor: pointer;
+.footer_bottom_container div span:hover {
+  cursor: pointer;
 }
-
-
 
 @media screen and (max-width: 900px) {
+  .footer_top_container {
+    flex-direction: column;
+  }
+  .footer_top_container div {
+    height: 100%;
+    width: 100%;
+    padding: 1em;
+  }
 
-    .footer_top_container{
-        flex-direction: column;
-
-    }
-.footer_top_container div{
-
-height: 100%;
-width: 100%;
-padding: 1em;
-}
-
-.footer_top_middle_container {
+  .footer_top_middle_container {
     align-items: flex-start;
-}
+  }
 
-.footer_top_right_container {
+  .footer_top_right_container {
     align-items: flex-start;
-  
-
-}
-.footer_top_right_container  div {
+  }
+  .footer_top_right_container div {
     padding: 0;
-}
+  }
 
-.footer_bottom_container{
-flex-direction: column;
-margin: 0;
-padding-bottom: 5em;
-text-align: center;
-}
-
-
+  .footer_bottom_container {
+    flex-direction: column;
+    margin: 0;
+    padding-bottom: 5em;
+    text-align: center;
+  }
 }
