--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,14 +1,15 @@
-.header_container{
-margin-bottom: 1em;
-
-
+.header_container {
+  margin-bottom: 1em;
 }
 .navBar {
-    position: -webkit-sticky !important; /* Safari */
-    position:sticky;
-    top: 0;
+  position: -webkit-sticky !important; /* Safari */
+  position: sticky;
+  top: 0;
 
-    background-image: linear-gradient(rgba(212, 212, 212, 0.233),rgba(211, 211, 211, 0.024));
+  background-image: linear-gradient(
+    rgba(212, 212, 212, 0.233),
+    rgba(211, 211, 211, 0.024)
+  );
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,117 +25,113 @@ margin-bottom: 1em;
   position: absolute;
   right: 0;
   top: 0;
-  background-image: linear-gradient(rgb(211, 211, 211),rgba(178, 178, 178));
+  background-image: linear-gradient(rgb(211, 211, 211), rgba(178, 178, 178));
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: space-between;
 
-  transform:translateX(0%); 
+  transform: translateX(0%);
   animation-name: opening;
   animation-duration: 1s;
 
   animation-direction: reverse;
-
 }
 
 .showMenu span {
-  
   font-size: 2em;
   padding: 1em;
-
 }
 
 .hideMenu {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    padding-inline-start: 0;
-    z-index: 10;
-    position: absolute;
-    right: 0;
-    top: 0;
-    background-image: linear-gradient(rgb(211, 211, 211),rgba(178, 178, 178));
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  
-    transform:translateX(100%); 
-    animation-name: closing;
-    animation-duration: 1s;
-  
-    animation-direction: reverse;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
+  z-index: 10;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-image: linear-gradient(rgb(211, 211, 211), rgba(178, 178, 178));
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 
-  
+  transform: translateX(100%);
+  animation-name: closing;
+  animation-duration: 1s;
 
+  animation-direction: reverse;
 }
 
 .hideMenu span {
-    color: green;
-    font-size: 2em;
-    padding: 1em;
-  }
-  .defaultMenu{
-    font-size: 0;
-    height: 0;
-    display: none;
-  }
+  color: green;
+  font-size: 2em;
+  padding: 1em;
+}
+.defaultMenu {
+  font-size: 0;
+  height: 0;
+  display: none;
+}
 
 @keyframes opening {
-    from {  transform:translateX(0%); }
-    to {   transform:translateX(100%);  }
+  from {
+    transform: translateX(0%);
   }
+  to {
+    transform: translateX(100%);
+  }
+}
 
-  
 @keyframes closing {
-    from {  transform:translateX(100%); }
-    to {   transform:translateX(0%);  }
+  from {
+    transform: translateX(100%);
   }
+  to {
+    transform: translateX(0%);
+  }
+}
 
-
-.navButtonOpened{
+.navButtonOpened {
   background-color: transparent;
   border: none;
   width: 205px;
   text-align: end;
 }
 
-.navButtonOpened:hover{
-cursor:pointer;
+.navButtonOpened:hover {
+  cursor: pointer;
 }
 
-.navButtonClosed{
+.navButtonClosed {
   transform: rotateY(180deg);
 
-padding: 1em;
-font-size:2em;
+  padding: 1em;
+  font-size: 2em;
 }
-.navButtonClosed:hover{
-
-  cursor:pointer;
-}
-
-.navButtonClosed img:hover{
-  filter:invert();
+.navButtonClosed:hover {
+  cursor: pointer;
 }
 
-  
-.navBar button{
+.navButtonClosed img:hover {
+  filter: invert();
+}
 
-  color:black;
+.navBar button {
+  color: black;
   border: 1px solid rgb(0, 0, 0);
   background-color: white;
   width: 205px;
   height: 5vh;
 }
 
-.navBar button:hover{
+.navBar button:hover {
   background-color: rgba(216, 216, 216, 0.184);
   cursor: pointer;
 }
 
-
-.header_container_inside{
+.header_container_inside {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -143,7 +140,7 @@ font-size:2em;
   padding: 1em 7em;
 }
 
-.header_container_categories{
+.header_container_categories {
   font-size: 2em;
   height: 100%;
   padding: 1em;
@@ -151,91 +148,86 @@ font-size:2em;
   justify-content: center;
 
   flex-direction: column;
- 
 }
-.header_container_categories h2{
+.header_container_categories h2 {
   font-size: 20px;
-
 }
-.header_container_categories ul{
+.header_container_categories ul {
   list-style: none;
   padding-inline-start: 0;
 }
-.header_container_categories ul li{
-padding: 0.3em 0;
- }
- .header_container_categories ul li:hover{
+.header_container_categories ul li {
   padding: 0.3em 0;
-color: white;
-cursor: pointer;
-   }
-
-   .right_side{
-    padding: 1em;
-    width: 40vw;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: column;
-   }
-    .right_side div{
-      margin: 0.9em;
-    }
-   .right_side span{
-    font-size: 1em;
-   }
-
-   .right_side button{
-    margin-bottom: 1em;
-    width: 100%;
-    height: 5vh;
-    
 }
-.right_side button:hover{
+.header_container_categories ul li:hover {
+  padding: 0.3em 0;
+  color: white;
   cursor: pointer;
-  background-color:rgba(70, 65, 65, 0.112) ;
+}
+
+.right_side {
+  padding: 1em;
+  width: 40vw;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+}
+.right_side div {
+  margin: 0.9em;
+}
+.right_side span {
+  font-size: 1em;
+}
+
+.right_side button {
+  margin-bottom: 1em;
+  width: 100%;
+  height: 5vh;
+}
+.right_side button:hover {
+  cursor: pointer;
+  background-color: rgba(70, 65, 65, 0.112);
 }
 
 @media screen and (max-width: 900px) {
-  .navBar:first-child{
+  .navBar:first-child {
     display: none;
   }
-  .sub_button{
+  .sub_button {
     display: none;
   }
-  .header_container_inside{
+  .header_container_inside {
     flex-direction: column;
- height: 150vh;
-  width: 100%;
+    height: 150vh;
+    width: 100%;
   }
-  .header_container_categories{
- height: 60vh;
- width: 40vw;
- padding-bottom: 0;
+  .header_container_categories {
+    height: 60vh;
+    width: 40vw;
+    padding-bottom: 0;
   }
-  .header_container h2{
+  .header_container h2 {
     margin-block-start: 0;
     margin-block-end: 0;
   }
-  .header_container_categories li{
-font-size: 20px;
-width: 40vw;
-  }
-  .right_side{
-  justify-content: start;
-width: 40vw;
-  }
-  .right_side p{
+  .header_container_categories li {
+    font-size: 20px;
     width: 40vw;
   }
-  .showMenu{
+  .right_side {
+    justify-content: start;
+    width: 40vw;
+  }
+  .right_side p {
+    width: 40vw;
+  }
+  .showMenu {
     height: 170vh;
-   
   }
-  .social{
-display: flex;
-margin-left: -1em;
+  .social {
+    display: flex;
+    margin-left: -1em;
   }
- 
 }
