--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,9 @@ body {
   overflow-x: hidden;
   padding: 0;
   margin: 0;
-  font-family: Telegraf-Regular,-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
+  font-family: Telegraf-Regular, -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
 }
 
 a {
@@ -20,12 +20,9 @@ a {
 
 * {
   box-sizing: border-box;
-
 }
 
-b{
+b {
   color: #60c26b;
   font-weight: 400;
 }
-
-
